--- a/personal-website2.2.css
+++ b/personal-website2.2.css
@@ -48,6 +48,21 @@
       position: absolute;
       top: 200px;
       right: 80px;
-      font-size: 2.8em;
+      font-size: 2.5em;
      
   }
+
+  .about, .education, .projects, .contacts{
+    margin-left: 160px;
+    padding: 0px 10px;
+  }
+
+  .about, .projects {
+    background-color: #FAFAFA;
+  }
+
+  .projects {
+    padding-top: 2em;
+  }
+
+
